--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -66,8 +66,8 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-  #- "github.com/diegofly91/apiturnos/src/graph/model"
-  - "github.com/diegofly91/apiturnos/src/schema/model"
+  #- "apiturnos/src/graph/model"
+  - "apiturnos/src/schema/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
@@ -88,7 +88,7 @@ models:
       - github.com/99designs/gqlgen/graphql.Int32
 #  Role:
 #    model:
-#      - github.com/diegofly91/apiturnos/src/modules/role/model.Role
+#      - apiturnos/src/modules/role/model.Role
 #  RoleInput:
 #    model:
-#      - github.com/diegofly91/apiturnos/src/modules/role/model.Role
+#      - apiturnos/src/modules/role/model.Role
