edit Token acces_token and refresh_token

--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
+### Database configuration variables ###
 PORT = 3000
 DB_NAME = goweb_db
 DB_USER = root
 DB_PASSWORD = password
 DB_HOST = localhost
 DB_PORT = 3306
-JWT_SECRET = mysecretkey
+
+### Secret application key ###
+JWT_SECRET = hashsecret
+JWT_EXPIRATION_SECRET = 30m
+JWT_REFRESH_SECRET = hashsecret-refresh
+JWT_EXPIRATION_SECRET_REFRESH = 720h
+JWT_SECRET_EMAIL = hashsecretEMAIL
+JWT_EXPIRATION_SECRET_EMAIL = 15m
